"Fixed" unreadable text in page feature

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -49,7 +49,6 @@ body {
 }
 
 .feature {
-  padding-bottom: .4rem;
   margin-bottom: 1.6rem;
   text-align: center;
   background: $color__site--accent;
@@ -59,6 +58,7 @@ body {
   .container {
     min-height: 35vh;
     max-width: 60%;
+    background: rgba(255,255,255,0.502);
     @include flex-direction(column);
     @include justify-content(center);
   }
